# app/model/entity/star.go
@@ -11,6 +11,7 @@ type Star struct {
 	Id         uint32    `json:"id" gorm:"primaryKey"`
 	Uid        uint32    `json:"uid" gorm:"not null;index"`
 	Name       string    `json:"name" gorm:"size:10"`
+	Anonymous  bool      `json:"anonymous" gorm:"default:false;comment:是否匿名"`
 	Content    string    `json:"content" gorm:"not null;size:300"`
 	EmailNeed  bool      `json:"email_need" gorm:"default:false;comment:是否需要邮件通知"`
 	EmailFlag  bool      `json:"email_flag" gorm:"default:false;comment:是否已经邮件通知"`
