# app/model/po/starsGet.go
@@ -1,5 +1,9 @@
 package po
 
+import (
+	"time"
+)
+
 /**
  * @author eyesYeager
  * @date 2023/1/30 14:43
@@ -7,7 +11,9 @@ package po
 
 type StarsGet struct {
 	Id         uint32
+	Uid        uint64
 	Content    string
+	Anonymous  bool
 	Name       string
-	CreateTime string
+	CreateTime time.Time
 }
