# app/model/receiver/starAdd.go
@@ -11,14 +11,14 @@ import (
 
 type StarAdd struct {
 	Content   string `json:"content" binding:"required,max=300"` // "提交内容"
-	Name      string `json:"name" binding:"max=10"`              // "署名"
-	EmailNeed bool   `json:"emailNeed" default:"false"`          // "是否需要寄送服务"
+	Anonymous bool   `json:"anonymous" default:"false"`          // "是否匿名"
+	Name      string `json:"name" binding:"max=10"`              // "化名"
 }
 
 func (starAdd StarAdd) GetMessages() validate.ValidatorMessages {
 	return validate.ValidatorMessages{
 		"content.required": "提交内容不能为空",
 		"content.max":      "提交内容长度不能大于300",
-		"name.max":         "署名长度不能大于10",
+		"name.max":         "化名长度不能大于10",
 	}
 }
