# docs/swagger.yaml
@@ -28,16 +28,16 @@ definitions:
     type: object
   receiver.StarAdd:
     properties:
+      anonymous:
+        default: false
+        description: '"是否匿名"'
+        type: boolean
       content:
         description: '"提交内容"'
         maxLength: 300
         type: string
-      emailNeed:
-        default: false
-        description: '"是否需要寄送服务"'
-        type: boolean
       name:
-        description: '"署名"'
+        description: '"化名"'
         maxLength: 10
         type: string
     required:
@@ -223,7 +223,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: 权限：Visitor
+      description: 权限：Admin
       parameters:
       - description: 短token
         in: header
